@@ -234,14 +234,17 @@ unlock::
 keybind 'KEY' 'COMMAND' ['ARGS ...']::
     Adds a key binding. When 'KEY' is pressed, the internal 'COMMAND' (with its
     'ARGS') is executed. A key binding is a (possibly empty) list of modifiers
-    (Mod1, Mod2, Mod3, Mod4, Mod5, Alt, Super, Control/Ctrl, Shift) and one key
+    (Mod1, Mod2, Mod3, Mod4, Mod5, Alt, Super, Control/Ctrl, Shift, Release) and one key
     (see keysymdef.h for a list of keys). Modifiers and the key are concatenated
-    with '-' or '+' as separator. If there is already a binding for this 'KEY',
+    with '-' or '+' as separator. The 'Release' modifier is only active during
+    key release events. If there is already a binding for this 'KEY',
     it will be overwritten. Examples:
 
         * keybind Mod4+Ctrl+q quit
         * keybind Mod1-i toggle always_show_frame
         * keybind Mod1-Shift-space cycle_layout -1
+        * +keybind Release-Mod4-Shift-p spawn scrot+ takes a screenshot when the
+          +p+ is released while Mod4 and Shift are still pressed.
 
 keyunbind 'KEY'|*-F*|*--all*::
     Removes the key binding for 'KEY'. The syntax for 'KEY' is defined in
