@@ -68,7 +68,8 @@ XMainLoop::XMainLoop(XConnection& X, Root* root)
     handlerTable_[ EnterNotify       ] = EH(&XMainLoop::enternotify);
     handlerTable_[ Expose            ] = EH(&XMainLoop::expose);
     handlerTable_[ FocusIn           ] = EH(&XMainLoop::focusin);
-    handlerTable_[ KeyPress          ] = EH(&XMainLoop::keypress);
+    handlerTable_[ KeyPress          ] = EH(&XMainLoop::keypressOrRelease);
+    handlerTable_[ KeyRelease        ] = EH(&XMainLoop::keypressOrRelease);
     handlerTable_[ MapNotify         ] = EH(&XMainLoop::mapnotify);
     handlerTable_[ MapRequest        ] = EH(&XMainLoop::maprequest);
     handlerTable_[ MappingNotify     ] = EH(&XMainLoop::mappingnotify);
@@ -532,8 +533,8 @@ void XMainLoop::focusin(XFocusChangeEvent* event) {
     duringFocusIn_ = false;
 }
 
-void XMainLoop::keypress(XKeyEvent* event) {
-    //HSDebug("name is: KeyPress\n");
+void XMainLoop::keypressOrRelease(XKeyEvent* event) {
+    HSDebug("name is: KeyPress\n");
     root_->keys()->handleKeyPress(event);
 }
 
