@@ -117,6 +117,23 @@ def test_keys_inactive(hlwm, keyboard, maskmethod, whenbind, refocus):
     hlwm.call_xfail('attr tags.1')
 
 
+def test_keyunbind_makes_client_receive_event(hlwm, keyboard):
+    hlwm.call(['keybind', 'z', 'echo', 'foo'])
+    winid, client_proc = hlwm.create_client(term_command='read -n 1')
+    # remove the binding after the client was created
+    hlwm.call(['keyunbind', 'z'])
+
+    assert hlwm.attr.clients.focus.winid() == winid
+
+    keyboard.press('z')
+
+    try:
+        print(f"waiting for client proc {client_proc.pid}")
+        client_proc.wait(PROCESS_SHUTDOWN_TIME)
+    except subprocess.TimeoutExpired:
+        assert False, "Expected client to quit, but it is still running"
+
+
 def test_invalid_keys_inactive_via_rule(hlwm, keyboard):
     hlwm.call_xfail('rule once keys_inactive=[b-a]') \
         .expect_stderr(r'Invalid .*\[b-a\].*:.*Invalid range in bracket')
@@ -127,7 +144,7 @@ def test_complete_keybind_offers_all_mods_and_syms(hlwm, prefix):
     complete = hlwm.complete(['keybind', prefix], partial=True, position=1)
 
     assert len(complete) > 200  # plausibility check
-    all_mods = ['Alt', 'Control', 'Ctrl', 'Mod1', 'Mod2', 'Mod3', 'Mod4', 'Mod5', 'Shift', 'Super']
+    all_mods = ['Alt', 'Control', 'Ctrl', 'Mod1', 'Mod2', 'Mod3', 'Mod4', 'Mod5', 'Shift', 'Super', 'Release']
     if prefix == 'Mod1+':
         all_mods = [m for m in all_mods if m not in ['Mod1', 'Alt']]
     assert sorted([c[:-1] for c in complete if c.endswith('+')]) == \
@@ -316,3 +333,134 @@ def test_keybind_unknown_binding(hlwm):
 def test_empty_keysym(hlwm, command):
     hlwm.call_xfail([command, '', 'true']) \
         .expect_stderr('Must not be empty')
+
+
+def test_key_release_works_after_bind(hlwm, keyboard):
+    hlwm.call(['new_attr', 'string', 'my_test', 'initial'])
+    hlwm.call(['keybind', 'Release-x', 'set_attr', 'my_test', 'release'])
+
+    keyboard.down('x')
+    assert hlwm.attr.my_test() == 'initial'
+
+    keyboard.up('x')
+    assert hlwm.attr.my_test() == 'release'
+
+
+def test_key_release_and_press(hlwm, keyboard):
+    hlwm.call(['new_attr', 'string', 'my_test', 'initial'])
+    hlwm.call(['keybind', 'Mod1-x', 'set_attr', 'my_test', 'press'])
+    hlwm.call(['keybind', 'Release-Mod1-x', 'set_attr', 'my_test', 'release'])
+    assert hlwm.attr.my_test() == 'initial'
+
+    keyboard.down('alt+x')
+    assert hlwm.attr.my_test() == 'press'
+
+    # the modifier 'alt' still needs to be pressed during the following event:
+    keyboard.up('x')
+    assert hlwm.attr.my_test() == 'release'
+
+
+def test_keys_inactive_key_can_be_removed(hlwm):
+    hlwm.call(['keybind', 'x', 'echo', 'foo'])
+    winid, _ = hlwm.create_client()
+    hlwm.attr.clients[winid].keys_inactive = 'x'
+
+    hlwm.call(['keyunbind', 'x'])
+    assert hlwm.call(['list_keybinds']).stdout.strip() == ''
+
+
+def test_keys_inactive_affects_release_binds(hlwm, keyboard):
+    hlwm.call(['new_attr', 'string', 'my_test', 'initial'])
+    hlwm.call(['keybind', 'Release-x', 'set_attr', 'my_test', 'release'])
+    winid, proc = hlwm.create_client(term_command='read -n 1')
+    hlwm.attr.clients[winid].keys_inactive = 'x'
+
+    keyboard.press('x')
+
+    # since 'x' is inactive, it should not have changed the attribute
+    assert hlwm.attr.my_test() == 'initial'
+    # ... and instead shut down the client:
+    try:
+        print(f"waiting for client proc {proc.pid}")
+        proc.wait(PROCESS_SHUTDOWN_TIME)
+    except subprocess.TimeoutExpired:
+        assert False, "Expected client to quit, but it is still running"
+
+
+def test_key_release_after_unbinding_press(hlwm, keyboard):
+    hlwm.call(['new_attr', 'string', 'my_test', 'initial'])
+    hlwm.call(['keybind', 'Mod1-x', 'set_attr', 'my_test', 'press'])
+    hlwm.call(['keybind', 'Release-Mod1-x', 'set_attr', 'my_test', 'release'])
+    hlwm.call(['keyunbind', 'Mod1-x'])
+    assert hlwm.attr.my_test() == 'initial'
+
+    keyboard.down('alt+x')
+    assert hlwm.attr.my_test() == 'initial'  # because we had removed the binding
+
+    # the modifier 'alt' still needs to be pressed during the following event:
+    keyboard.up('x')
+    assert hlwm.attr.my_test() == 'release'
+
+
+def test_key_press_after_unbinding_release(hlwm, keyboard):
+    hlwm.call(['new_attr', 'string', 'my_test', 'initial'])
+    hlwm.call(['keybind', 'Mod1-x', 'set_attr', 'my_test', 'press'])
+    hlwm.call(['keybind', 'Mod1-Release-x', 'set_attr', 'my_test', 'release'])
+    hlwm.call(['keyunbind', 'Release-Mod1-x'])
+    assert hlwm.attr.my_test() == 'initial'
+
+    keyboard.down('alt+x')
+    assert hlwm.attr.my_test() == 'press'  # because we had removed the binding
+
+    # the modifier 'alt' still needs to be pressed during the following event:
+    keyboard.up('x')
+    assert hlwm.attr.my_test() == 'press'
+
+
+@pytest.mark.parametrize('bind_press', [True, False])
+@pytest.mark.parametrize('bind_release', [True, False])
+@pytest.mark.parametrize('unbind_press', [True, False])
+@pytest.mark.parametrize('unbind_release', [True, False])
+@pytest.mark.parametrize('client_spawn_position', ['pre_bind', 'pre_unbind', 'last'])
+def test_client_does_not_see_bound_key(hlwm, keyboard, bind_press, bind_release, unbind_press, unbind_release, client_spawn_position):
+    hlwm.call(['new_attr', 'string', 'my_test', 'initial'])
+
+    if client_spawn_position == 'pre_bind':
+        winid, proc = hlwm.create_client(term_command='read -n 1')
+
+    if bind_press:
+        hlwm.call(['keybind', 'z', 'set_attr', 'my_test', 'grabbed'])
+    if bind_release:
+        hlwm.call(['keybind', 'Release-z', 'set_attr', 'my_test', 'grabbed'])
+
+    if client_spawn_position == 'pre_unbind':
+        winid, proc = hlwm.create_client(term_command='read -n 1')
+
+    if unbind_press:
+        # run unchecked, because the command will fail if it was not bound
+        result = hlwm.unchecked_call(['keyunbind', 'z'])
+        assert (result.returncode == 0) == bind_press
+    if unbind_release:
+        result = hlwm.unchecked_call(['keyunbind', 'Release-z'])
+        assert (result.returncode == 0) == bind_release
+
+    if client_spawn_position == 'last':
+        winid, proc = hlwm.create_client(term_command='read -n 1')
+
+    assert proc is not None
+    assert winid is not None
+    assert hlwm.attr.clients.focus.winid() == winid
+
+    client_gets_event = (not bind_press or unbind_press) and (not bind_release or unbind_release)
+
+    keyboard.press('z')
+
+    if client_gets_event:
+        assert hlwm.attr.my_test() == "initial"
+        try:
+            print(f"waiting for client proc {proc.pid}")
+            proc.wait(PROCESS_SHUTDOWN_TIME)
+        except subprocess.TimeoutExpired:
+            assert False, "Expected client to quit, but it is still running"
+    else:
+        assert hlwm.attr.my_test() == "grabbed"
